tests/specs/check/wasm/check.out
Download [WILDCARD]
Check (tsc [WILDLINE])
TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'number'.
console.log(add(1, ""));
                   ~~
    at file://[WILDCARD]/main.ts:3:20

error: Type checking failed.
